fixed upload progress icon layout on mobile/desktop [#154548810]

--- a/src/FileUploader/components/_FileUploader.scss
+++ b/src/FileUploader/components/_FileUploader.scss
@@ -131,6 +131,10 @@
   }
 }
 
+.upload-progress {
+  padding: 12px !important;
+}
+
 //Mobile
 @include mobile {
   .fileUploadErrorMessage {
@@ -228,10 +232,6 @@
         }
       }
     }
-  }
-
-  .uploadedFileDelete {
-    float: right;
   }
 
   .open-access-checkbox {
